Fix spacing on ribbon

--- a/src/scss/pages/_blog.scss
+++ b/src/scss/pages/_blog.scss
@@ -11,7 +11,7 @@
     .ribbon {
       position: absolute;
       top: $spacing-small;
-      left: -($spacing-small);
+      left: -($spacing-base);
       color: $white;
       padding: $spacing-xxxs $spacing-base;
       font-family: $font-family-headers;
